# sparql-parser

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  conanfile.py  main.cpp
include/Dice/Sparql-Parser/: Exceptions.hpp  Parser.hpp  PathAlternative.hpp  PathMode.hpp  PathSequence.hpp  PropertySetElement.hpp  QueryGeneratorVisitor.hpp  SelectClause.hpp  SparqlFinalVisitor.hpp
include/Dice/Sparql-Parser/internal/: Exceptions.hpp  PathAlternative.hpp  PathMode.hpp  PathSequence.hpp  PropertySetElement.hpp  QueryGeneratorVisitor.hpp  SelectClause.hpp  SelectNodeType.hpp  TripleObject.hpp
include/Dice/sparql-parser/: Parser.hpp
include/Dice/sparql-parser/internal/: Exceptions.hpp  QueryGeneratorVisitor.hpp  SelectClause.hpp  SelectNodeType.hpp
tests/: BasicBgpsTests.cpp  BasicOptionalPatternTests.cpp  CMakeLists.txt  ComplexOptionalPatternTests.cpp  GrammerTests.cpp  ParserTest.cpp  TestUtilites.hpp  Tests.cpp
